--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   get: ^4.6.6
   google_sign_in: ^6.2.1
   delightful_toast: ^1.1.0
+  firebase_storage: ^12.2.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
