--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,10 @@ dependencies:
   image_picker: ^1.1.2
   shimmer: ^3.0.0
   google_fonts: ^6.2.1
+  firebase_messaging: ^15.1.0
+  flutter_local_notifications: ^17.2.2
+  app_settings: ^5.1.1
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
